[tool.poetry]
name = "course-v3"
version = "0.1.0"
description = ""
authors = ["Anshul Khandelwal <anshul@anshul.io>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "1.3.0"
fastai = "1.0.58"
torchvision = "0.4.1"
jupyter = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
